refactor: back ProblemService with repository and add normalization, filtering, search and stats